--- a/styles/css.css
+++ b/styles/css.css
@@ -79,11 +79,13 @@ body{
 
 
 
+
+
 .banner-container{
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 18em;
+    gap: 15em;
     height: 750px;
     
 }
@@ -98,7 +100,8 @@ body{
         border-radius: 18px;
         border: none;
         padding: 12px 22px;
-        color: white;    
+        color: white;   
+        font-weight: 800; 
 }
 .btn-2{
     background-color:#4EC5F7 ;
@@ -106,12 +109,13 @@ body{
     border: none;
     padding: 12px 22px;
     color: white;  
+    font-weight: 800; 
 }
 
 .goat-button{
     display: flex;
     gap: 1em;
-    padding-top:13px;
+    padding-top:18px;
 }
 .goat-image{
     padding-bottom: 25px;
@@ -131,7 +135,7 @@ body{
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-weight: 800;
-   font-size: 65px;
+   font-size: 80px;
 }
 
 .play{
@@ -158,6 +162,8 @@ body{
 
 
 
+
+
 .we-are-gamer-container{
     display: flex;
     align-items: center;
@@ -172,6 +178,7 @@ body{
     border: none;
     padding: 12px 22px;
     color: white;  
+    font-weight: 800; 
 }
 .we-are-gamer-text{
     text-align: right;
@@ -200,10 +207,17 @@ body{
 
 
 
+
+
+
+
+
+
 .online-games-videos{
     display: flex;
     justify-content: center;
     gap: 1.5em;
+    height: 450px;
 }
 .online{
     text-align: center;
@@ -219,6 +233,43 @@ body{
 .online h5{
     font-weight: 400;
 }
+.rec-video{
+    width: 330px;
+    position: relative;
+}
+.rec-video img{
+    width: 100%;
+}
+.overlay-icon{
+    position: absolute;
+    display: none;
+    top: 125px; 
+    text-align: center;
+}
+.overlay-icon img{
+    width: 70px;
+    height: 70px;
+    border-radius: 60%;
+}
+.overlay-icon h4{
+    color: #FF42A5;
+    font-weight: bold;
+}
+.rec-video:hover .overlay-icon{
+    display: block;
+    width: 100%;
+    height: 86%;
+    cursor: pointer;
+    background-color: #00000070;
+    margin-top: -125px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    border: 5px solid #FF42A5;
+    border-radius: 12px;
+}
+
 
 
 
@@ -266,6 +317,7 @@ body{
 .inner-img img{
     width: 320px;
 }
+
 
 
 
@@ -368,26 +420,81 @@ footer{
 
 
 
-@media  screen and (max-width: 576px){
-    
+@media screen and (max-width:450px){
     .nav-container{
+        display: flex;
         flex-direction: column;
-        height: 220px;
+        height: 200px;
     }
-    .manus{
+     .nav-item ul{            
         flex-direction: column;
-    }
+     } 
+.banner-container{
+    flex-direction: column-reverse;
+    padding-top: 750px;
+}
+.goat-image img{
+    width: 400px;
+    height: 400px;
+}
+
+.banner-left{
+    margin-top: -200px;
+    padding-bottom: 650px;
+    padding-left: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+}
+
+.we-are-gamer-container{
+    flex-direction: column;
+    padding-top: 925px;
+}
+
+.we-are-gamer-image img{
+    width: 450px;
+    height: 450px; 
+}
+.we-are-gamer-text{
+    padding-bottom: 800px;
+    text-align: center;
+    margin-top: -100px; 
+}
+
+.online-games-videos{
+    flex-direction: column;
+    padding-top: 925px;
+    padding-left: 50px;
+   
+}
+.rec-video:hover .overlay-icon{
+    height: 385px;
+}
+.rec-video{
+   text-align: center;
+}
+
+.double-image{
+   flex-direction: column;
+   padding-top: 975px;
+   padding-bottom: 400px;
+}
+.double-image-text{
+    text-align: center;
+}
+
+.footer-2nd{
+    font-size: 10px;
+    gap: 1em;
+}
+.footer-3rd{
+    font-size: 10px;
+    gap: 1em;
+}
 
 }
-@media screen and (max-width:576px) {
-    .banner-container{
-        flex-direction: column-reverse;
-        height: 1200px;      
-        
-    }
-}
-@media screen and (max-width:576px) {
-    .we-are-gamer-container{
-         flex-direction: column;
-    }
-}
+
+
+
+
