--- a/styles/css.css
+++ b/styles/css.css
@@ -209,10 +209,6 @@ body{
 
 
 
-
-
-
-
 .online-games-videos{
     display: flex;
     justify-content: center;
@@ -309,12 +305,12 @@ body{
 .main-img > img{
     width: 100%;
 }
-.main-img .inner-img{
+.main-img .img-big{
     position: absolute;
     top: 60%;
     left: -20%;
 }
-.inner-img img{
+.img-big img{
     width: 320px;
 }
 
@@ -361,9 +357,6 @@ body{
     border: 2px solid #FF42A5;
     cursor: pointer;
 }
-
-
-
 
 
 
@@ -420,10 +413,10 @@ footer{
 
 
 
-@media screen and (max-width:450px){
+@media screen and (max-width:450px){                                                     
     .nav-container{
         display: flex;
-        flex-direction: column;
+        flex-direction: column;                                                          /* Best result for 450 x 850  */
         height: 200px;
     }
      .nav-item ul{            
@@ -466,7 +459,7 @@ footer{
     flex-direction: column;
     padding-top: 925px;
     padding-left: 50px;
-   
+   padding-bottom: 1000px;
 }
 .rec-video:hover .overlay-icon{
     height: 385px;
@@ -475,11 +468,34 @@ footer{
    text-align: center;
 }
 
-.double-image{
-   flex-direction: column;
-   padding-top: 975px;
-   padding-bottom: 400px;
+.btn-with-logo{
+    margin-top: -60px;
 }
+
+.double-image{
+     margin-top: -130px;
+    flex-direction: column;
+    gap: 4em;
+  }
+  .double-image-text,.main-img{
+    width: 100%;
+  }
+  .main-img .img-big{
+    left: 10%;
+  }
+  .main-img{
+    padding-left: 50px;
+  }
+
+  #rec55{
+    width:350px;
+    padding-left: 50px;
+
+  }
+  #rec66{
+    width: 150px;
+  }
+  
 .double-image-text{
     text-align: center;
 }
